# mathlib-inspector

./: .env.example  .gitignore  Algebra_a7.lean  MathlibInspector.lean  README.md  algebra_605624.lean  algebra_634567.lean  analyse_output.py  analyse_size.py  auto_commit.py  check.py  check_hash.py  enhance_commit.py  enhance_commit_for_deps.py  extract_thms.py  generate_deps.py  inequalities_24125.lean  join_deps.py  lake-manifest.json  lakefile.toml  number_theory_236660.lean  numbertheory_610310.lean  numbertheory_610310_v2.lean  proof_transition.examples  pyproject.toml  sin_20_bounds.lean  sort_files.py  tests.lean  thm_level.py  thm_level_constant.py  thms_dep1.txt  thms_dep3.txt  thms_dep4.txt  thms_dep5.txt
.github/workflows/: deps_action_ci.yml  lean_action_ci.yml
